--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #spring.servlet.multipart.max-file-size=128KB
 #spring.servlet.multipart.max-request-size=128KB
-spring.http.multipart.enabled=true
+#spring.http.multipart.enabled=true
+spring.servlet.multipart.enabled=true
